Chat header alignment fixes for the mobile layout

--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -67,7 +67,7 @@
 
         .go-back-button {
           cursor: pointer;
-          margin-right: 0.7em;
+          margin-right: 1.2em;
 
           i {
             color: $fallback--link;
